# opseeq

./: .dockerignore  .env.example  .gitignore  .mcp.json  Dockerfile  Dockerfile.service  README.md  docker-compose.yml  opseeq-architecture.md  skills-lock.json
.github/: dependabot.yml
agent-os/: README.md  biome.json  pnpm-lock.yaml
config/: nemoclaw-godmode-policy.yaml  nemoclaw-godmode.system-prompt.md  nemoclaw-precision-orchestration-policy.yaml  nemoclaw-precision-orchestration.system-prompt.md  nemoclaw-superior-policy.yaml  nemoclaw-superior.system-prompt.md
copilot/: .env.example  Makefile  QC.md  README.md  REFACTOR.md  TODO.md  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json
dashboard/: package-lock.json  package.json  server.js
docs/: INTEGRATION.md  opseeq-nemoclaw-superior-edition.md  opseeq-openclaw-general-clawd-plan.md  repo-desktop-onboarding-prd.md
engine/: Cargo.toml
engine/src/: chat.rs  config.rs  events.rs  main.rs  probe.rs  router.rs  rpc.rs  run_state.rs  types.rs
engine/src/anthropic/: client.rs  mod.rs  sse.rs
engine/src/providers/: anthropic.rs  mod.rs  ollama.rs  openai.rs
scripts/: build-mac-icon.sh  build-opseeq-image.sh  install-opseeq-desktop.sh  install-opseeq-godmode-edition.sh  install-opseeq-precision-edition.sh  install-opseeq-superior-edition.sh  launch-opseeq-desktop.sh  opseeq-service-upgrade-v25.sh  pull-v6-models.sh  upgrade-dashboard-phase2.sh
service/: opseeq-v2.5-unified.patch  package-lock.json  package.json  tsconfig.json
test/: cli.test.js  dashboard-phase2.test.js  policies.test.js  (+9 more)
(+142 files in other folders)
