[package]
name = "opseeq-core"
version = "0.1.0"
edition = "2021"
description = "Deterministic runtime kernel for Opseeq local-first intelligence operations"

[[bin]]
name = "opseeq-core"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
rustyline = "15"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"

[profile.release]
opt-level = 3
lto = true
strip = true
